small change to the page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Invy</title>
 </head>
 <body>
-<h1>Welcome to Invy.com</h1>
+<h1>Welcome to Invy.com!! Right place for investors</h1>
 </body>
 </html>
